# qso

./: .env.example  .gitignore  BENCHMARK_QUANTUM_WALK.md  BENCHMARK_SUITE_DOCUMENTATION.md  CHANGELOG.md  CI_BENCHMARK_UPGRADE_SUMMARY.md  Cargo.toml  DEV_SETUP.md  DIONICEOS_INTEGRATION.md  HOWTO_RUN_CORE.md  LICENSE  PRODUCT_OVERVIEW.md  QUANTENINFORMATIONSVERARBEITUNG_DOKUMENTATION.md  README.md  README_DEUTSCH.md  RELEASE_PLAN.md  SCS_README.md  VQA_IMPLEMENTATION_GUIDE.md  metatron_telemetry.toml  requirements-scs.txt  scs_run.py  start_dashboard.bat
.github/workflows/: benchmarks.yml  ci.yml  comprehensive_benchmarks.yml  core_python_ci.yml  core_rust_ci.yml  quantum_benchmarks.yml  release.yml  scs_calibration.yml
ci/: quantum_walk_baseline.json
docs/: BENCHMARK_POLICY.md  BILDANLEITUNG.md  CI_PIPELINE_OVERVIEW.md  PYTHON_SDK_GUIDE.md  SCHNELLANLEITUNG.md  SCS_BENCHMARK_SCHEMA.md  SCS_CORE_DESIGN.md  SCS_USAGE_GUIDE.md  WINDOWS_SETUP.md  WINDOWS_SETUP_DEUTSCH.md  backend_system.md  pyo3_integration.md  seraphic_calibration_shell.md  telemetry_and_dashboard.md
docs/dioniceos/: QUICK_START.md  README.md
metatron-qso-rs/: CHANGELOG.md  Cargo.toml  DETERMINISTIC_EXECUTION_PLAN.md  PROJECT_ROADMAP.md  README.md
metatron-qso-rs/ci/: advanced_algorithms_baseline.json  cross_system_baseline.json  integration_baseline.json  qaoa_baseline.json  quantum_walk_baseline.json  vqc_baseline.json  vqe_baseline.json
metatron-qso-rs/docs/: ARCHITECTURE.md  RUST_CORE_GUIDE.md  boson_tuning.md  cross_system_vqe_scoring.md  grover_tuning.md  quantum_walk_mixing.md  vqc_overview.md  vqe_tuning.md
metatron-qso-rs/examples/: basic.rs  quantum_walk.rs  vqa_demo.rs
metatron-qso-rs/src/: advanced_algorithms.rs  hamiltonian.rs  lib.rs  optimizer.rs  params.rs  qso.rs  quantum_walk_toolkit.rs  symmetry_codes.rs
metatron-qso-rs/src/dtl/: mod.rs  network.rs  operations.rs  resonator.rs  state.rs
metatron-qso-rs/src/graph/: metatron.rs  mod.rs
metatron-qso-rs/src/quantum/: mod.rs  operator.rs  state.rs
metatron-qso-rs/src/quantum_walk/: analysis.rs  continuous.rs  krylov.rs  mod.rs  scattering.rs
metatron-qso-rs/src/vqa/: ansatz.rs  cost_function.rs  mod.rs  optimizer.rs  qaoa.rs  vqc.rs  vqe.rs
metatron_backend/: Cargo.toml
metatron_backend/src/: circuit.rs  lib.rs  registry.rs
metatron_backend/src/backends/: ibm.rs  local.rs  mod.rs
metatron_dionice_bridge/: Cargo.toml  README.md
metatron_dionice_bridge/src/: lib.rs  python.rs
metatron_qso_py/: Cargo.toml  README.md  pyproject.toml
metatron_qso_py/examples/: 01_quantum_walk_basic.py  02_qaoa_maxcut_basic.py  03_vqe_ground_state.py  04_qw_centrality_ranking.py  05_qw_anomaly_detection.py  06_qaoa_optimizer_advanced.py
metatron_qso_py/notebooks/: QuantumWalk_Intro.ipynb
metatron_qso_py/python/metatron_qso/: __init__.py  auto_tuning.py
metatron_qso_py/src/: lib.rs
metatron_telemetry/: Cargo.toml  README.md
metatron_telemetry/src/: config.rs  lib.rs  main.rs  state.rs
metatron_telemetry/src/api/: handlers.rs  mod.rs  routes.rs
metatron_telemetry/static/: index.html
metatron_telemetry/static/css/: style.css
metatron_telemetry/static/js/: app.js
metatron_triton/: Cargo.toml  README.md
metatron_triton/src/: lib.rs  search.rs  signature.rs  spiral.rs  strategy.rs
scs/: __init__.py  __main__.py  benchmark.py  calibrator.py  cli.py  config.py  core.py  cri.py  field.py  operators.py  performance.py  por.py
