[package]
name = "metatron_triton"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Klemm"]
description = "TRITON spiral search core for Seraphic Calibration Shell"
license = "MIT"

[dependencies]
# Numerics
rand = { workspace = true }
rand_distr = { workspace = true }

# Serialization (for telemetry integration)
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
